--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -19,6 +19,14 @@
     
 }
 
+.btn-danger {
+    background-color: red;
+    transition: background-color .3s ease
+    &:hover {
+        background-color: darken($color: red, $amount:10 )
+    }
+    
+}
 
 .btn-primary {
     background-color: $primary;
